# smart-explorer

./: .gitignore  AGENTS.md  DISCLAIMER.txt  README.md  install-linux.sh
native/: Cargo.toml  README.md  app.manifest  app.rc  build.rs  installer.nsi  publish-feed.sh  publish-linux-feed-wsl.sh  publish-release-local.ps1  publish-update.ps1  update_source.txt
native/agent-bin/: se-agent-aarch64-linux-musl  se-agent-x86_64-linux-musl
native/assets/: smart-explorer-icon-256.rgba
native/explorer-command/: AppxManifest.xml  Cargo.toml  build-dll.sh
native/explorer-command/src/: lib.rs
native/src/: agent.rs  agent_proto.rs  analytics.rs  app.rs  autostart.rs  bisync.rs  cfprovider.rs  cfsync.rs  cloud.rs  connect.rs  copy.rs  creds.rs  daemon.rs  dragout.rs  folder_index.rs  format.rs  ftp.rs  gdrive.rs  icons.rs  linemerge.rs  main.rs  net.rs  quickshare.rs  rscan.rs  scanner.rs  sftp.rs  share.rs  shell_register.rs  support_dirs.rs  syncjobs.rs  types.rs  updater.rs  vfs.rs  webdav.rs
native/src/agent/: deploy.rs  metadata.rs  mod.rs  tests.rs
native/src/agent/core/: backend.rs  deploy.rs  mux.rs  stream.rs  tests.rs  transfer.rs
native/src/agent/core_oslocked/: backend.rs  deploy.rs  mux.rs  stream.rs  transfer.rs
native/src/agent_proto/: codec.rs  codec_tests.rs  core_oslocked.rs  hash.rs  mod.rs  types.rs
native/src/agent_proto/core/: codec.rs  codec_tests.rs  server.rs  session.rs
native/src/agent_proto/core_oslocked/: search.rs  server.rs  session.rs  transfer.rs
native/src/analytics/: mod.rs
native/src/analytics/core_oslocked/: analytics.rs
native/src/app/: agent_update_remote.rs  analytics_core.rs  clipboard.rs  dialogs.rs  drag_drop.rs  drains_connect.rs  filterbar.rs  frame_layout.rs  init.rs  menus_sync.rs  mod.rs  omni_accel.rs  platform_helpers.rs  prefs_tabs.rs  preview_core.rs  scanning.rs  shell_toolbar.rs  sidebar.rs  status_errors.rs  support_paths.rs  sync_core.rs  table.rs  transfer_helpers.rs  treemap.rs  watchers.rs
native/src/app/core/: agent_update_remote.rs  analytics_core.rs  analytics_ui.rs  app_models.rs  bisync_ui.rs  central_tabs.rs  dialogs.rs  drains_connect.rs  filterbar.rs  frame_keyboard.rs  frame_layout.rs  frame_update.rs  init.rs  job_editor.rs  job_editor_ui.rs  landing.rs  menus_settings.rs  menus_sync.rs  merge_ui.rs  omni_accel.rs  picker_impl.rs  picker_types.rs  prefs_tabs.rs  prelude.rs  preview_core.rs  reclaim_core.rs  reclaim_ui.rs  scanning.rs  share.rs  shell_toolbar.rs  sidebar.rs  state.rs  status_errors.rs  support_paths.rs  sync_core.rs  table.rs  tests.rs  view_selection.rs
native/src/app/core_oslocked/: file_actions.rs  frame_keyboard.rs  frame_update.rs  menus_settings.rs  picker_impl.rs  remote_helpers.rs  remote_open.rs  share.rs  state.rs  support_paths.rs  view_selection.rs
native/src/app/os/: linux_os.rs  windows.rs
native/src/autostart/: mod.rs
native/src/autostart/os/: linux_os.rs  non_windows.rs  windows.rs
native/src/bisync/: core.rs  mod.rs  orchestration.rs  tests.rs
native/src/bisync/core/: paths.rs  plan.rs  types.rs
native/src/bisync/core_oslocked/: apply.rs  persistence.rs  snapshot.rs  tests.rs
native/src/bisync/tests/: extra.rs
native/src/cloud/: mod.rs
native/src/cloud/core/: cloud.rs
native/src/cloud/os/: non_windows.rs  shared.rs  windows.rs
native/src/connect/: mod.rs  persistence.rs
native/src/connect/core/: endpoint.rs  types.rs
native/src/connect/core_oslocked/: connector.rs
native/src/copy/: mod.rs
native/src/copy/core_oslocked/: copy.rs
native/src/creds/: mod.rs
native/src/creds/core/: types.rs
native/src/creds/os/: shared.rs
native/src/daemon/: mod.rs  platform.rs  schedule.rs  tests.rs
native/src/daemon/core_oslocked/: job.rs  state.rs
native/src/filter/: mod.rs
native/src/filter/core/: filter.rs
native/src/folder_index/: mod.rs  search.rs  tests.rs
native/src/folder_index/core/: filters.rs  model.rs  search.rs
native/src/folder_index/core_oslocked/: index_build.rs  persistence.rs
native/src/folder_index/os/: linux_os.rs  non_windows.rs  shared.rs  windows.rs
native/src/format/: mod.rs
native/src/format/core/: format.rs
native/src/ftp/: mod.rs
native/src/ftp/core/: ftp.rs
native/src/gdrive/: api.rs  metadata.rs  mod.rs
native/src/gdrive/core/: api.rs  auth.rs  backend.rs  cache.rs  changes.rs  core.rs  metadata.rs  state.rs  transfer.rs
native/src/gdrive/core_oslocked/: backend.rs  transfer.rs
native/src/icons/: mod.rs
native/src/icons/core/: icons.rs
native/src/icons/os/: shared.rs  windows.rs
native/src/linemerge/: mod.rs
native/src/linemerge/core/: linemerge.rs
native/src/net/: mod.rs
native/src/net/core/: net.rs
native/src/net/os/: non_windows.rs  windows.rs
native/src/quickshare/: mod.rs
native/src/rscan/: mod.rs
native/src/scanner/: mod.rs
native/src/scanner/core/: entry.rs
native/src/scanner/os/: linux_os.rs  shared.rs  windows.rs
native/src/sftp/: config.rs  mod.rs  url.rs
native/src/sftp/core/: backend.rs  errors.rs  io_adapters.rs  metadata.rs  session.rs
native/src/sftp/core_oslocked/: io_adapters.rs
native/src/share/: core_oslocked.rs  mod.rs  tests.rs  transfer.rs  types.rs
native/src/share/core/: advertise.rs  backend.rs  crypto.rs  fs.rs  identity.rs  line.rs  profiles.rs  protocol.rs  relay.rs  service.rs  session.rs  tests.rs  types.rs  wire.rs
native/src/share/core_oslocked/: advertise.rs  protocol.rs  service.rs  session.rs
native/src/shell_clipboard/os/: windows.rs
native/src/shell_menu/: mod.rs
native/src/shell_menu/os/: windows.rs
native/src/shell_register/os/: windows.rs
native/src/sync/: mod.rs
native/src/sync/core_oslocked/: sync.rs
native/src/syncjobs/: mod.rs  persistence.rs  results.rs
native/src/syncjobs/core/: types.rs  (+1 more)
native/src/types/: mod.rs
native/src/updater/: feed.rs  mod.rs  os.rs
native/src/vfs/: cache.rs  core.rs  dispatch.rs  mod.rs  tests.rs
native/src/webdav/: mod.rs
native/src/zipfs/: mod.rs
se-agent/: Cargo.toml
se-agent/src/: main.rs
share-server/: Cargo.toml
share-server/src/: line.rs  main.rs
(+142 files in other folders)
