[package]
name = "smart_explorer"
version = "0.3.8"
edition = "2021"
authors = ["Silas <weizenbein1@gmail.com>"]
description = "Fast native file explorer with deep filtering"

[dependencies]
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "wgpu"] }
egui_extras = { version = "0.29", features = ["datepicker"] }
rayon = "1.10"
crossbeam-channel = "0.5"
notify = "6"
regex = "1"
globset = "0.4"
rfd = { version = "0.15", default-features = false, features = ["common-controls-v6"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
trash = "5"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_LibraryLoader",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
# High-level Windows bindings for the Shell IContextMenu dance and the
# virtual-file IDataObject (filter-aware clipboard).
windows-core = "0.58"
winreg = "0.52"
windows = { version = "0.58", features = [
    "implement",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_System_SystemServices",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_WindowsAndMessaging",
] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.dev]
opt-level = 1
