[package]
name = "smart_explorer"
version = "0.5.31"
edition = "2021"
authors = ["Silas <weizenbein1@gmail.com>"]
description = "Fast native file explorer with deep filtering"

[dependencies]
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "wgpu"] }
egui_extras = { version = "0.29", features = ["datepicker"] }
rayon = "1.10"
crossbeam-channel = "0.5"
notify = "6"
regex = "1"
globset = "0.4"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
trash = "5"
# Blocking HTTP client for the git/HTTPS update feed (updater.rs). `tls` pulls
# rustls backed by **ring** (verified: no aws-lc-sys in the tree) + bundled
# webpki-roots — so it cross-compiles on windows-gnu without NASM/CMake and
# needs no OS cert store. See docs/GOTCHAS.md (aws-lc-rs trap).
ureq = { version = "2", default-features = false, features = ["tls", "json"] }
# SFTP backend (sftp.rs). russh's DEFAULT crypto is aws-lc-rs (needs NASM/CMake,
# breaks on GNU) — so default-features=false + ring. See docs/GOTCHAS.md.
russh = { version = "0.61", default-features = false, features = ["ring", "flate2"] }
russh-sftp = "2"
# Multi-thread runtime: a worker thread drives russh's background connection
# task continuously, so the blocking Backend bridge (rt.block_on per op) is
# robust without an always-running dedicated thread. See sftp.rs.
tokio = { version = "1", default-features = false, features = ["rt", "rt-multi-thread", "net", "io-util", "time"] }
# FTP/FTPS backend (ftp.rs). Blocking FtpStream (no runtime). rustls (NOT
# native-tls) to avoid schannel/OpenSSL FFI on GNU. See docs/GOTCHAS.md.
suppaftp = { version = "6", default-features = false, features = ["rustls"] }
# Explicit ring-backed rustls ClientConfig for FTPS (no aws-lc); webpki-roots
# bundles the trust store (no OS cert dependency). Shared 0.23 build with
# ureq/russh/suppaftp.
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
webpki-roots = "0.26"
# Secret storage for saved connections (creds.rs). Windows → Credential Manager
# (windows-native, pure FFI). No platform backend off-Windows → in-memory mock,
# so the crate still builds + tests on the host.
keyring = { version = "3", default-features = false, features = ["windows-native"] }
# WebDAV cloud backend (webdav.rs): WebDAV is HTTP, so it reuses the verified
# ring-rustls ureq above. roxmltree parses PROPFIND multistatus XML (tiny, pure
# Rust); base64 for HTTP Basic auth (already in the tree via rustls).
roxmltree = "0.20"
base64 = "0.22"
# Cloud/OAuth (cloud.rs, #19): JSON for the Drive REST API + token responses,
# SHA-256 for the PKCE code-challenge, and OS randomness for the verifier/state.
# All pure Rust — no native libs, so the windows-gnu cross-compile is unaffected.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
getrandom = "0.2"
# Peer file sharing (share.rs, #21): Noise NNpsk0 E2E channel (snow's default
# resolver is pure Rust — x25519-dalek + chacha20poly1305 + blake2/sha2, no
# aws-lc) keyed by a PSK derived from the pairing/room code via HKDF.
snow = "0.9"
hkdf = "0.12"
# Quick Share (quickshare.rs, #Q): mDNS discovery/advertisement of the Nearby
# Share service so Android devices appear on the LAN. Pure Rust (if-addrs +
# socket2), cross-compiles clean.
mdns-sd = "0.11"

# rfd is per-target so the crate also builds on a non-Windows host (CI / local
# `cargo test`): Windows uses the Win32 common-controls dialog; elsewhere the
# xdg-portal backend. This split has ZERO effect on the shipped Windows binary.
[target.'cfg(windows)'.dependencies]
rfd = { version = "0.15", default-features = false, features = ["common-controls-v6"] }
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_WNet",
    "Win32_Storage_FileSystem",
    "Win32_System_LibraryLoader",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
# High-level Windows bindings for the Shell IContextMenu dance and the
# virtual-file IDataObject (filter-aware clipboard).
windows-core = "0.58"
winreg = "0.52"
# Native Cloud Files API provider for on-demand remote placeholders (#30).
# Safe wrapper around CfAPI (same `windows` 0.58); used by real sync engines.
cloud-filter = "0.0.6"
nt-time = "0.8"
windows = { version = "0.58", features = [
    "implement",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_Storage_CloudFilters",
    "Win32_System_Com",
    "Win32_System_IO",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_System_SystemServices",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_WindowsAndMessaging",
] }

# Host-only (CI / `cargo test`); never part of the Windows build.
[target.'cfg(not(windows))'.dependencies]
rfd = { version = "0.15", default-features = false, features = ["xdg-portal", "tokio"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.dev]
opt-level = 1
