[package]
name = "smart-explorer-share-server"
version = "0.1.0"
edition = "2021"
description = "Rendezvous/signaling server for Smart Explorer peer file sharing — routes discovery only, never file data."

[[bin]]
name = "se-share-server"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tungstenite = { version = "0.24", default-features = false, features = ["handshake"] }

[profile.release]
opt-level = 3
lto = "thin"
strip = "symbols"
